fix print layout issues and fix some urls

--- a/assets/css/orbit-1.css
+++ b/assets/css/orbit-1.css
@@ -124,7 +124,7 @@ p {
   padding: 25px;
 }
 
-.sidebar-wrapper .container-block-title {
+.sidebar-wrapper .container-bock-title {
   text-transform: uppercase;
   font-size: 16px;
   font-weight: 700;
@@ -364,5 +364,23 @@ p {
     float: left;
     width: 30%;
     margin-bottom: 0;
+  }
+}
+
+@media print {
+  body {
+    background-color: #fff;
+  }
+
+  .copyright {
+    display: none !important;
+  }
+  a:not(.btn){
+    text-decoration: none;
+  }
+
+  .wrapper{
+    margin: 0;
+    max-width: 100%; 
   }
 }
